fixing picture issue on mobile

--- a/FriendsEat/style/photogrid.css
+++ b/FriendsEat/style/photogrid.css
@@ -37,5 +37,8 @@ img{
         -ms-flex: 100%;
         flex: 100%;
         max-width: 100%;
+        min-width: 100%;
+        height: auto;
+        overflow: visible;
     }
 }
